--- a/FrontApp/src/app/landing/landing.scss
+++ b/FrontApp/src/app/landing/landing.scss
@@ -2,7 +2,7 @@
 .landing-background {
   @extend .full-width;
   @extend .full-height;
-  background: linear-gradient( rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0) ),url(../assets/landscape_comp.jpg);
+  background: linear-gradient( rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0) ),url(../assets/paris2.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-attachement: fixed;
