--- a/FrontApp/src/app/main/projets/liste/listeProjets.jade
+++ b/FrontApp/src/app/main/projets/liste/listeProjets.jade
@@ -26,5 +26,5 @@ section
             | surface entre {{ project.min_surface | number }} et {{ project.max_surface }} m
             sup 2
 
-md-button.action-button.md-warn.md-fab( ui-sref="main.projects.new")
+md-button.action-button.md-warn.md-fab( ui-sref="main.newProject")
   span.fa.fa-plus
