--- a/FrontApp/src/app/main/main.jade
+++ b/FrontApp/src/app/main/main.jade
@@ -39,7 +39,7 @@ div.full-height( layout="column", layout-fill )
     ng-show="$state.includes('main.project')"
   )
     md-tabs( 
-      class="md-whiteframe-z1 md-white-theme"
+      class=" md-white-theme"
       md-stretch-tabs="always"
       style="z-index: 3; position: relative; display: block"
     )
