--- a/FrontApp/src/app/main/projets/liste/listeProjets.jade
+++ b/FrontApp/src/app/main/projets/liste/listeProjets.jade
@@ -5,7 +5,7 @@ section
 
   md-list( layout="column" )
     md-item( 
-      ng-repeat="project in Project.projects"
+      ng-repeat="project in projects"
       ng-click="navToProject(project)"
       style="position: relative"
       md-ink-ripple
