--- a/FrontApp/src/app/main/projets/liste/listeProjets.scss
+++ b/FrontApp/src/app/main/projets/liste/listeProjets.scss
@@ -2,16 +2,22 @@
 
 // oups -_-
 $pink: rgb( 233, 30, 99 );
+$indigo: rgb(63,81,181);
 
-$news-count-width: 2.2em;
+$news-count-width: 3em;
 $news-count-color: $pink;
-$news-count-margin: 1.5em;
+$news-count-margin: 1em;
 
 .news-count {
   width: $news-count-width;
   height: $news-count-width;
   border-radius: $news-count-width / 2;
-  background-color: rgba( 0, 0, 0, 0.3 );
-  margin: $news-count-margin;
-  color: white;
+  background-color: transparent;
+  margin-right: $news-count-margin;
+  color: $indigo;
+}
+
+md-item.active .news-count {
+  background-color: $indigo !important;
+  color: white !important;
 }
