--- a/FrontApp/src/index.jade
+++ b/FrontApp/src/index.jade
@@ -1,5 +1,5 @@
 doctype html
-html(lang="en", ng-app="trouverDesTerrains")
+html(lang="en" ng-app="trouverDesTerrains" resizable)
   head
     meta(charset="utf-8")
     meta( name='viewport' content="width=device-width" )
