--- a/FrontApp/src/app/main/ad/ad.jade
+++ b/FrontApp/src/app/main/ad/ad.jade
@@ -1,4 +1,4 @@
-div.full-height( layout="column", layout-fill )
+div.full-height( layout="column", layout-fill style="height: 100%" )
   md-button.md-fab.md-accent(
     style="position: fixed; bottom: 3em; right: 3em"
     ng-click="archiveAd()"
@@ -13,5 +13,4 @@ div.full-height( layout="column", layout-fill )
   md-toolbar.md-primary( style="position: relative" )
     h1.md-toolbar-tools
       a.fa.fa-chevron-left( ui-sref="^" )
-      a.pacifico( ui-sref="main.projects" )  &nbsp; &nbsp; Cherche ton appart 
-  iframe( flex ng-src="{{ ad.url }}" style="width: 100%; border: 0px" )
+  iframe( flex ng-src="{{ trust( ad.url ) }}" style="width: 100%; border: 0px;" iframe-resize )
