--- a/FrontApp/src/app/main/main.jade
+++ b/FrontApp/src/app/main/main.jade
@@ -16,5 +16,4 @@ div.full-height( layout="column", layout-fill )
       div( ui-view="title" ) 
 
   md-content(class="full-width full-height grey-bg landing-background")
-    div( ui-view="main", class="wrapper" )
-
+    div( ui-view="main", class="wrapper full-height" )
