--- a/FrontApp/src/app/main/projets/liste/listeProjets.jade
+++ b/FrontApp/src/app/main/projets/liste/listeProjets.jade
@@ -1,5 +1,5 @@
 section
-  md-subheader.md-primary 
+  md-subheader.md-primary.md-sticky-no-effect
     div.md-subheader-content
       h2.md-subheader-content Mes projets
 
