--- a/FrontApp/src/app/landing/landing.jade
+++ b/FrontApp/src/app/landing/landing.jade
@@ -2,7 +2,7 @@ div.landing-background( layout="column", layout-align="center center" )
   div( flex=35 )
   div( layout="column" layout-align="space-around center" class="big-padding center" )
     h4.text-white.landing-title Woodstack terrains
-    h1.text-white Cherchez des terrains sans effort
+    h1.text-white Cherchez votre appart facilement
     md-button.md-primary.md-raised.signin-button( 
       ng-click="authenticate()" 
     )
