--- a/FrontApp/src/app/landing/landing.jade
+++ b/FrontApp/src/app/landing/landing.jade
@@ -5,13 +5,14 @@ div.landing-background( layout="column", layout-align="center center" )
     h1.text-white Cherchez votre appart facilement
     md-button.md-primary.md-raised.signin-button( 
       ng-click="googleAuthenticate()" 
-      style="margin-bottom: 10px"
+      style="margin-bottom: 10px; width: 300px"
     )
       span.fa.fa-google
       | &nbsp; connexion avec google
 
     md-button.md-primary.md-raised.signin-button( 
       ng-click="facebookAuthenticate()" 
+      style="width: 300px"
     )
       span.fa.fa-facebook
       | &nbsp; connexion avec facebook
