--- a/FrontApp/src/app/main/main.jade
+++ b/FrontApp/src/app/main/main.jade
@@ -29,4 +29,4 @@ div.full-height( layout="column", layout-fill )
     infinite-scroll-distance="3" 
     infinite-scroll-immediate-check="false"
   )
-    div( ui-view="main", style="min-height: 100%" ng-class="{'wrapper': $state.current.data.wrapper == undefined}")
+    div( ui-view="main", style="height: 100%" ng-class="{'wrapper': $state.current.data.wrapper == undefined}")
