--- a/FrontApp/src/app/main/main.jade
+++ b/FrontApp/src/app/main/main.jade
@@ -11,7 +11,7 @@ div.full-height( layout="column", layout-fill )
         ng-click="toggleLeftNav()"
         style="cursor: pointer" hide-gt-md
       )
-      a.pacifico( ui-sref="main.projects")  &nbsp; &nbsp; Cherche ton appart 
+      a.pacifico( ui-sref="main.projects")  &nbsp; &nbsp; Cherche ton appart à Paris
       div( ui-view="title" ) 
       div( flex )
       span.fa.fa-search( 
