--- a/FrontApp/src/app/main/main.jade
+++ b/FrontApp/src/app/main/main.jade
@@ -11,7 +11,7 @@ div.full-height( layout="column", layout-fill )
         ng-click="toggleLeftNav()"
         style="cursor: pointer" hide-gt-md
       )
-      a.pacifico( ui-sref="main.projects")  &nbsp; &nbsp; Cherche ton appart à Paris
+      a.pacifico( ui-sref="main.projects" hide-gt-md )  &nbsp; &nbsp; Cherche ton appart
       div( ui-view="title" ) 
       div( flex )
       span.fa.fa-search( 
@@ -28,7 +28,6 @@ div.full-height( layout="column", layout-fill )
     class="full-width grey-bg landing-background"
     style="height: 100%" 
     infinite-scroll="loadMoreAds()" 
-    infinite-scroll-distance="3" 
-    infinite-scroll-immediate-check="false"
+    infinite-scroll-distance="1" 
   )
     div( ui-view="main", style="height: 100%" ng-class="{'wrapper': $state.current.data.wrapper == undefined}")
