--- a/FrontApp/src/app/main/projets/new/new.jade
+++ b/FrontApp/src/app/main/projets/new/new.jade
@@ -40,6 +40,13 @@ div.big-padding
         type="number"
         name="prix max"
       )
+    md-input-container
+      label Code Postal : 
+      input(
+        ng-model="project.search_criteria.district"
+        type="text"
+        name="arrondissement"
+      )
 
 
 
