--- a/FrontApp/src/app/main/projets/detail/sidenav.jade
+++ b/FrontApp/src/app/main/projets/detail/sidenav.jade
@@ -5,7 +5,7 @@ md-toolbar
       style="cursor: pointer"
       hide-gt-md
     )
-    a.pacifico( ui-sref="main.projects" )  &nbsp; &nbsp; Cherche ton appart
+    a.pacifico( ui-sref="main.projects" ) &nbsp; ChercheAppart
 
 md-content
   md-list.lands-list(
