--- a/FrontApp/src/index.jade
+++ b/FrontApp/src/index.jade
@@ -4,6 +4,7 @@ html(lang="en" ng-app="trouverDesTerrains" resizable)
     meta(charset="utf-8")
     meta( name='viewport' content="width=device-width" )
     title=pageTitle
+    link( href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css' )
 
     // mixpanel analytics
     include ./front_assets/mixpanel.html
