--- a/FrontApp/src/app/main/projets/new/new.jade
+++ b/FrontApp/src/app/main/projets/new/new.jade
@@ -47,6 +47,13 @@ div.big-padding
         type="text"
         name="arrondissement"
       )
+    md-input-container
+      label Recevoir des alertes emails à la parution de nouvelles annonces : 
+      input(
+        ng-model="project.send_alert_emails"
+        type="checkbox"
+        name="recevoir des alertes emails"
+      )
 
 
 
