--- a/FrontApp/src/app/main/main.jade
+++ b/FrontApp/src/app/main/main.jade
@@ -21,7 +21,7 @@ div( layout="column" layout-fill style="height: 100%; overflow: hidden" )
       )
 
   div.landing-background( layout="row" layout-fill )
-    md-sidenav.content-height( 
+    md-sidenav.full-content-height( 
       md-is-locked-open="$media('gt-md')" 
       md-component-id="sidenav-left" 
       autoscroll="false"
