--- a/FrontApp/src/app/main/projets/detail/ads.jade
+++ b/FrontApp/src/app/main/projets/detail/ads.jade
@@ -3,7 +3,7 @@ div(
   style="margin-bottom: 300px"
 )
   section( style="position: relative" flex )
-    md-subheader.md-primary
+    div.md-subheader.md-primary
       div.md-subheader-content
         h2 {{ Project.project.name }} 
         h5( hide-gt-md ) {{ Lists.activeList().name }}
