added date on ads

--- a/FrontApp/src/app/main/projets/detail/ads.jade
+++ b/FrontApp/src/app/main/projets/detail/ads.jade
@@ -32,6 +32,7 @@ div(
                 div.md-tile-content
                   div
                     h3( ng-click="selectAd(ad)" ) {{ ad.location }} - {{ ad.district }}
+                      span(class='pull-right') {{ ad .created_at | date: format: 'dd/mm/yyyy' }}
                     p {{ ad.description }}
                     p {{ ad.price }} &euro;
                     p {{ ad.surface | number }} m
